[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ui/dialog-translucent.png" type="Texture" id=1]
[ext_resource path="res://HelpScreen.gd" type="Script" id=2]
[ext_resource path="res://ui/button_pressed_style.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/buttons_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/help/move.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/grass.jpg" type="Texture" id=6]
[ext_resource path="res://ui/button_style.tres" type="StyleBox" id=7]

[node name="HelpScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="Box" type="NinePatchRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -300.0
margin_right = 450.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 200 )
texture = ExtResource( 1 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -269.5
margin_right = 410.0
margin_bottom = 269.5
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="Title" type="CenterContainer" parent="CanvasLayer/Box/VBoxContainer"]
margin_right = 820.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="CanvasLayer/Box/VBoxContainer/Title"]
margin_left = 366.0
margin_right = 454.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Help"
align = 1

[node name="MainHelp" type="CenterContainer" parent="CanvasLayer/Box/VBoxContainer"]
margin_top = 57.0
margin_right = 820.0
margin_bottom = 377.0
rect_min_size = Vector2( 200, 100 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Box/VBoxContainer/MainHelp"]
margin_left = 250.0
margin_right = 570.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 200 )
texture = ExtResource( 5 )

[node name="HelpText" type="MarginContainer" parent="CanvasLayer/Box/VBoxContainer"]
margin_top = 393.0
margin_right = 820.0
margin_bottom = 434.0

[node name="Label" type="Label" parent="CanvasLayer/Box/VBoxContainer/HelpText"]
margin_right = 820.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "swipe to move"
align = 1
autowrap = true

[node name="ButtonsContainer" type="HBoxContainer" parent="CanvasLayer/Box/VBoxContainer"]
margin_top = 450.0
margin_right = 820.0
margin_bottom = 550.0
custom_constants/separation = 8
alignment = 1

[node name="Back" type="Button" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer"]
margin_left = 206.0
margin_right = 406.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 7 )
text = "Back"

[node name="Next" type="Button" parent="CanvasLayer/Box/VBoxContainer/ButtonsContainer"]
margin_left = 414.0
margin_right = 614.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 7 )
text = "Next"

[connection signal="pressed" from="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CanvasLayer/Box/VBoxContainer/ButtonsContainer/Next" to="." method="_on_Next_pressed"]
